# OpenGL-lorenz-system

./: CMakeLists.txt  README.md
assets/shaders/: compute_particles.glsl  instance.frag  instance.vert
lib/glad/: glad.h
src/: ComputeShader.cpp  ComputeShader.h  Graphics.cpp  Graphics.h  GraphicsShader.cpp  GraphicsShader.h  Shader.cpp  Shader.h  glad.c  main.cpp
